llvm-toolchain-11 (1:11.0.0~+rc2-5) UNRELEASED; urgency=medium

  [ John Paul Adrian Glaubitz ]
  * Link against libatomic on powerpc to fix FTBFS in stage2

 -- John Paul Adrian Glaubitz <glaubitz@physik.fu-berlin.de>  Sat, 29 Aug 2020 15:11:20 +0200

llvm-toolchain-11 (1:11.0.0~+rc2-4) unstable; urgency=medium

  * integration-test-suite-test: change the configuration for 11

 -- Sylvestre Ledru <sylvestre@debian.org>  Fri, 28 Aug 2020 23:08:33 +0200

llvm-toolchain-11 (1:11.0.0~+rc2-3) unstable; urgency=medium

  * Fix testsuite by ignoring binfmts test
    (can't be enabled on autopkgtests)

 -- Gianfranco Costamagna <locutusofborg@debian.org>  Fri, 28 Aug 2020 21:56:49 +0200

llvm-toolchain-11 (1:11.0.0~+rc2-2) unstable; urgency=medium

  [ Gianfranco Costamagna ]
  * Disable ocaml support on i386, not reasonable to support it there
    (specially for Ubuntu)
  * Enable binfmt support before using it in tests, to fix them

  [ Sylvestre Ledru ]
  * Also link against -latomic on mipsel to fix
   /usr/[...]/atomic_base.h:426: undefined reference to `__atomic_load_8'
   for lld to fix the FTBFS
  * Fix a FTBFS on armel with libcxx-armhf-ftbfs.diff
    atomic:2780:16: error: use of undeclared identifier '__libcpp_signed_lock_free'
    typedef atomic<__libcpp_signed_lock_free> atomic_signed_lock_free;
               ^
    atomic:2781:16: error: unknown type name '__libcpp_unsigned_lock_free'; did you mean 'atomic_signed_lock_free'?
    typedef atomic<__libcpp_unsigned_lock_free> atomic_unsigned_lock_free;

 -- Sylvestre Ledru <sylvestre@debian.org>  Tue, 25 Aug 2020 10:44:00 +0200

llvm-toolchain-11 (1:11.0.0~+rc2-1) unstable; urgency=medium

  * New snapshot release

 -- Sylvestre Ledru <sylvestre@debian.org>  Thu, 20 Aug 2020 22:17:47 +0200

llvm-toolchain-11 (1:11.0.0~+rc1-2) unstable; urgency=medium

  * Don't install ompt-multiplex.h on armhf, mipsel and mips64el
    (Closes: #967944)

 -- Sylvestre Ledru <sylvestre@debian.org>  Wed, 05 Aug 2020 15:23:25 +0200