@@ -1,7 +1,9 @@
+#!/usr/bin/dh-exec
+
 usr/lib/llvm-@LLVM_VERSION@/lib/clang/@LLVM_VERSION@*/include
 
 usr/lib/llvm-@LLVM_VERSION@/lib/clang/@LLVM_VERSION@*/lib
 usr/lib/llvm-@LLVM_VERSION@/lib/clang/@LLVM_VERSION@*/*.txt
 usr/lib/llvm-@LLVM_VERSION@/lib/clang/@LLVM_VERSION@*/share/*.txt
 
-usr/lib/llvm-@LLVM_VERSION@/lib/libPolly*.a
+[!powerpc !powerpcspe] usr/lib/llvm-@LLVM_VERSION@/lib/libPolly*.a
